Fix: decrease font size that had been too large because of my screen zoomed out to 75%

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ h1, h2 {
   font-family: 'Gaegu', cursive;
   text-align: center;
   margin-top: 20px;
-  font-size: 60px;
+  font-size: 45px;
 }
 
 .home-container {
@@ -29,7 +29,7 @@ h1, h2 {
   margin-bottom: 20px;
   background-color: beige;
   border-radius: 8px;
-  font-size: 1.2rem;
+  font-size: 15px;
 }
 
 .product-image {
@@ -52,7 +52,7 @@ h1, h2 {
 }
 
 .change-data-buttons > button {
-  font-size: 30px;
+  font-size: 20px;
   font-family: 'Nanum Gothic';
   border: none;
   background-color: orange;
